<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.wecraw.treatyourself.activities.NewEventActivity"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="Name your event"
        android:paddingBottom="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">


        <Button
            android:text="@string/earns_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light"
            android:id="@+id/buttonEarns"
            android:onClick="earns"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:text=" "
            android:background="#000000"
            android:id="@+id/textView6"/>

        <Button
            android:text="@string/spends_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="?attr/colorButtonNormal"
            android:textColor="@android:color/black"
            android:id="@+id/buttonSpends"
            android:onClick="spends"/>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:text=" "
        android:background="#000000"
        android:id="@+id/textView"/>

    <LinearLayout
        android:id="@+id/timed_untimed_row"

        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">


        <Button
            android:text="@string/timed_button"
            android:onClick="timed"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonTimed"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light" />
        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:text=" "
            android:background="#000000"
            android:id="@+id/textView5"/>

        <Button
            android:text="@string/untimed_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonUntimed"
            android:layout_weight="1"
            android:onClick="untimed"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="?attr/colorButtonNormal"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:text=" "
        android:background="#000000"
        android:id="@+id/textView2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:text="5 Points"
            android:onClick="easy"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonEasy"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/background_light" />
        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:text=" "
            android:background="#000000"
            android:id="@+id/textView3"/>

        <Button
            android:text="10 Points"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonMedium"
            android:layout_weight="1"
            android:onClick="medium"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="?attr/colorButtonNormal"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:text=" "
            android:background="#000000"
            android:id="@+id/textView4"/>
        <Button
            android:text="20 Points"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/buttonHard"
            android:layout_weight="1"
            android:onClick="hard"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="?attr/colorButtonNormal"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:text="@string/value_explain"
        android:layout_width="match_parent"
        android:id="@+id/value_explain"
        android:textStyle="normal|bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:layout_height="50dp" />

    <Button
        android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:onClick="createEvent"
        android:enabled="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewQuickEventExplain"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/quick_event_detail"
        android:visibility="invisible" />




</LinearLayout>