<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/mmbutton_margin"

    android:orientation="vertical"
    tools:context="com.wecraw.treatyourself.activities.MainActivity">



    <Button
        android:text="Log Event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogEvent"
        android:layout_weight="1"
        android:onClick="logEvent"
        android:textSize="@dimen/main_menu_button_text_size"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/home_button_background"
        android:drawableRight="@drawable/log_event_icon"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/mmbutton_margin"
        android:layout_marginLeft="@dimen/mmbutton_margin"
        android:layout_marginRight="@dimen/mmbutton_margin"
        android:layout_marginStart="@dimen/mmbutton_margin"
        android:layout_marginBottom="@dimen/mmbutton_margin" />

    <Button
        android:text="@string/todo_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonTodo"
        android:layout_weight="1"
        android:background="@drawable/home_button_background"
        android:drawableRight="@drawable/check_in_box_icon"
        android:textAllCaps="false"
        android:textSize="@dimen/main_menu_button_text_size"
        android:textColor="@android:color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/mmbutton_margin"
        android:layout_marginLeft="@dimen/mmbutton_margin"
        android:layout_marginRight="@dimen/mmbutton_margin"
        android:layout_marginStart="@dimen/mmbutton_margin"
        android:layout_marginBottom="@dimen/mmbutton_margin" />

    <Button
        android:text="@string/new_event"

        android:onClick="newEvent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreateEvent"
        android:layout_weight="1"
        android:textSize="@dimen/main_menu_button_text_size"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/home_button_background"
        android:drawableRight="@drawable/new_activity_icon"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginRight="@dimen/mmbutton_margin"
        android:layout_marginLeft="@dimen/mmbutton_margin"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/mmbutton_margin"
        android:layout_marginEnd="@dimen/mmbutton_margin"
        android:layout_marginStart="@dimen/mmbutton_margin" />
    <Button
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/user_profile_icon"
        android:id="@+id/buttonUserDetail"
        android:text="@string/your_profile"
        android:background="@drawable/home_button_background"
        android:drawableRight="@drawable/user_profile_icon"
        android:textSize="@dimen/main_menu_button_text_size"
        android:textColor="@android:color/white"
        android:onClick="yourProfile"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/mmbutton_margin"
        android:layout_marginLeft="@dimen/mmbutton_margin"
        android:layout_marginRight="@dimen/mmbutton_margin"
        android:layout_marginStart="@dimen/mmbutton_margin"
        android:layout_marginBottom="@dimen/mmbutton_margin" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|start"

        android:layout_weight="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="bottom|start"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Hey Will!"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:textColor="@color/grey"
                android:gravity="bottom|start"
                android:id="@+id/textViewHey"
                android:textStyle="bold"
                android:layout_weight="1"
                android:scrollHorizontally="true"

                android:maxLines="1"
                android:elevation="1dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"
                android:textSize="70dp" />

        </LinearLayout>




    </HorizontalScrollView>
<!--
    <TextView
        android:text="Will"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:textColor="@color/grey"
        android:textSize="60sp"
        android:gravity="bottom|start"
        android:id="@+id/textViewHey"
        android:textStyle="bold"
        android:layout_weight="2.75"
        android:scrollHorizontally="true"

        android:maxLines="1"
        android:elevation="1dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever" /> -->


</LinearLayout>
